--- a/app/partials/allAdsList.html
+++ b/app/partials/allAdsList.html
@@ -1,3 +1,14 @@
-<div class="jumbotron">
-    all adds are here
+<div class="jumbotron" ng-controller="GetAllAdsController">
+    <div class="row">
+        <div class="col-md-9">
+            <ul>
+                <li ng-repeat="ad in allAds.ads">
+                    {{ad}}
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            dddd
+        </div>
+    </div>
 </div>
