--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,5 +1,5 @@
 <form class="form-horizontal">
-    <fieldset>
+    <fieldset class="col-lg-6 col-lg-offset-3">
         <legend>Login</legend>
         <div class="form-group">
             <label for="inputEmail" class="col-lg-2 control-label">Email</label>
@@ -11,11 +11,12 @@
             <label for="inputPassword" class="col-lg-2 control-label">Password</label>
             <div class="col-lg-10">
                 <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Checkbox
-                    </label>
-                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-lg-10 col-lg-offset-2">
+                <button type="submit" class="btn btn-primary">Login</button>
+                <a href="#" class="pull-right">Register here</a>
             </div>
         </div>
     </fieldset>
