controllers and services modified

--- a/app/partials/allAdsList.html
+++ b/app/partials/allAdsList.html
@@ -47,7 +47,18 @@
             </ul>
         </div>
         <div class="col-md-3">
-            dddd
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"><strong>Categories</strong></div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"><strong>Towns</strong></div>
+                <div class="panel-body">
+                    {{allTowns}}
+                </div>
+            </div>
         </div>
     </div>
 </div>
