--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,11 @@
+body {
+    padding-top: 70px;
+}
+
+#rightNavPart {
+    padding-right: 30px;
+}
+
 #logo{
     font-size: 26px;
 }
@@ -12,4 +20,10 @@ ul {
 
 .adImage{
     width:100%;
+}
+footer {
+    position: fixed;
+    height: 40px;
+    bottom: 0;
+    width: 100%;
 }
