--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,10 +1,10 @@
-<form class="form-horizontal">
+<form class="form-horizontal" ng-controller="LoginController">
     <fieldset class="col-lg-6 col-lg-offset-3">
         <legend>Login</legend>
         <div class="form-group">
-            <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+            <label for="Username" class="col-lg-2 control-label">Username</label>
             <div class="col-lg-10">
-                <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+                <input type="text" class="form-control" id="Username" placeholder="Username">
             </div>
         </div>
         <div class="form-group">
@@ -16,7 +16,7 @@
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
                 <button type="submit" class="btn btn-primary">Login</button>
-                <a href="#" class="pull-right">Register here</a>
+                <a href="#/register" class="pull-right">Register here</a>
             </div>
         </div>
     </fieldset>
