--- a/app/partials/register.html
+++ b/app/partials/register.html
@@ -1,22 +1,58 @@
-<form class="form-horizontal">
-    <fieldset class="col-lg-6 col-lg-offset-3">
+<form class="form-horizontal" ng-controller="RegisterController">
+    <fieldset class="col-lg-10 col-lg-offset-1">
         <legend>Registration Form</legend>
-        <div class="form-group">
-            <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-            <div class="col-lg-10">
-                <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="username" class="col-lg-2 control-label">Username</label>
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" id="username" placeholder="Username" ng-model="user.username">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+                <div class="col-lg-10">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword" class="col-lg-2 control-label">ConfirmPassword</label>
+                <div class="col-lg-10">
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="ConfirmPassword">
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-            <div class="col-lg-10">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="name" class="col-lg-2 control-label">Name</label>
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" id="name" placeholder="Name" ng-model="user.name">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="phone" class="col-lg-2 control-label">Phone</label>
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" id="phone" placeholder="Phone" ng-model="user.phone">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="email" class="col-lg-2 control-label">Email</label>
+                <div class="col-lg-10">
+                    <input type="email" class="form-control" id="email" placeholder="Email" ng-model="user.email">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="town" class="col-lg-2 control-label">Town</label>
+                <div class="col-lg-10">
+                    <select id="town" class="form-control" ng-options="town.id as town.name for town in allTowns" ng-model="user.townId"> </select>
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-lg-10 col-lg-offset-2">
-                <button type="submit" class="btn btn-primary">Login</button>
-                <a href="#" class="pull-right">Register here</a>
+    </fieldset>
+    <fieldset class="col-lg-10 col-lg-offset-1">
+        <div class="col-md-6">
+            <div class="form-group">
+                <button class="btn btn-primary" ng-click="register(user)">Register</button>
+                <a href="#/login" class="pull-right">Login here</a>
             </div>
         </div>
     </fieldset>
