register form bugs fixed - acquired session token

--- a/app/partials/register.html
+++ b/app/partials/register.html
@@ -17,7 +17,7 @@
             <div class="form-group">
                 <label for="confirmPassword" class="col-lg-2 control-label">ConfirmPassword</label>
                 <div class="col-lg-10">
-                    <input type="password" class="form-control" id="confirmPassword" placeholder="ConfirmPassword">
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="ConfirmPassword" ng-model="user.confirmPassword">
                 </div>
             </div>
         </div>
