--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -4,18 +4,18 @@
         <div class="form-group">
             <label for="Username" class="col-lg-2 control-label">Username</label>
             <div class="col-lg-10">
-                <input type="text" class="form-control" id="Username" placeholder="Username">
+                <input type="text" class="form-control" id="Username" placeholder="Username" ng-model="user.username">
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword" class="col-lg-2 control-label">Password</label>
             <div class="col-lg-10">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password">
             </div>
         </div>
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button class="btn btn-primary" ng-click="login(user)">Login</button>
                 <a href="#/register" class="pull-right">Register here</a>
             </div>
         </div>
