--- a/app/partials/allAdsList.html
+++ b/app/partials/allAdsList.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" ng-controller="GetAllAdsController">
+<div class="jumbotron" ng-controller="AdsController">
     <div class="row">
         <div class="col-md-9">
             <ul>
