--- a/app/partials/allAdsList.html
+++ b/app/partials/allAdsList.html
@@ -1,4 +1,21 @@
-<div class="jumbotron" ng-controller="AdsController">
+<div class="navbar-collapse collapse navbar-responsive-collapse" id="rightNavPart" ng-if="!isLogged">
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="#/login">Login</a></li>
+        <li><a href="#/register">Register</a></li>
+    </ul>
+</div>
+<div class="navbar-collapse collapse navbar-responsive-collapse" ng-if="isLogged">
+    <ul class="nav navbar-nav">
+        <li class="active"><a href="#/">My Ads</a></li>
+        <li class="active"><a href="#/">Publish New Ad</a></li>
+        <li class="active"><a href="#/">Edit Profile</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="">TODO NAme</a></li>
+        <li><a href="#/showAllAds">Logout</a></li>
+    </ul>
+</div>
+<div class="jumbotron">
     <div class="row">
         <div class="col-md-9">
             <ul>
