--- a/app/partials/allAdsList.html
+++ b/app/partials/allAdsList.html
@@ -12,7 +12,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li><a href="">Welcome, TODO</a></li>
-        <li><a href="" ng-click="logout()">Logout</a></li>
+        <li><a href="#/logout" ng-click="logout()">Logout</a></li>
     </ul>
 </div>
 <div class="jumbotron">
