--- a/app/partials/loggedNavbar.html
+++ b/app/partials/loggedNavbar.html
@@ -1,4 +1,4 @@
-<div class="navbar-collapse collapse navbar-responsive-collapse">
+<div class="navbar-collapse collapse navbar-responsive-collapse" ng-if="isLogged" ng-controller="LogoutController">
     <ul class="nav navbar-nav">
         <li class="active"><a href="#/">My Ads</a></li>
         <li class="active"><a href="#/">Publish New Ad</a></li>
