--- a/app/partials/notLoggedNavbar.html
+++ b/app/partials/notLoggedNavbar.html
@@ -1,4 +1,4 @@
-<div class="navbar-collapse collapse navbar-responsive-collapse" id="rightNavPart">
+<div class="navbar-collapse collapse navbar-responsive-collapse" id="rightNavPart" ng-if="!isLogged">
     <ul class="nav navbar-nav navbar-right">
         <li><a href="#/login">Login</a></li>
         <li><a href="#/register">Register</a></li>
