publish view created

--- a/app/partials/allAdsList.html
+++ b/app/partials/allAdsList.html
@@ -64,7 +64,7 @@
                     <a href="#">All</a>
                     <ul>
                         <li ng-repeat="town in allTowns  | limitTo: 4">
-                            <a href="" ng-click="getTownId()">{{town.name}}</a>
+                            <a href="">{{town.name}}</a>
                         </li>
                     </ul>
                 </div>
