--- a/app/partials/loggedNavbar.html
+++ b/app/partials/loggedNavbar.html
@@ -1,7 +1,7 @@
-<div class="navbar-collapse collapse navbar-responsive-collapse" ng-if="isLogged" ng-controller="LogoutController">
+<div class="navbar-collapse collapse navbar-responsive-collapse" ng-controller="LogoutController">
     <ul class="nav navbar-nav">
         <li class="active"><a href="#/">My Ads</a></li>
-        <li class="active"><a href="#/publish">Publish New Ad</a></li>
+        <li class="active"><a href="#/user/ads/publish">Publish New Ad</a></li>
         <li class="active"><a href="#/">Edit Profile</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
