--- a/app/partials/publishAdView.html
+++ b/app/partials/publishAdView.html
@@ -27,7 +27,33 @@
                 <div class="form-group">
                     <label for="image" class="col-lg-2 control-label">Image:</label>
                     <div class="col-lg-10">
-                        <input type="file" class="form-control" id="image" placeholder="Browse for file" ng-model="publishForm.image"/>
+                        <input type="file" class="form-control" id="image" placeholder="Browse for file" ng-model="publishForm.imageDataUrl"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="category" class="col-lg-2 control-label">Category:</label>
+                    <div class="col-lg-10">
+                        <select id="category" ng-model="publishForm.categoryId">
+                            <option value="null">(None)</option>
+                            <option ng-repeat="c in allCategories" value="{{c.id}}">{{c.name}}</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="town" class="col-lg-2 control-label">Town:</label>
+                    <div class="col-lg-10">
+                        <select id="town" ng-model="publishForm.townId">
+                            <option value="null">(None)</option>
+                            <option ng-repeat="t in allTowns" value="{{t.id}}">{{t.name}}</option>
+                        </select>
                     </div>
                 </div>
             </div>
