--- a/app/partials/publishAdView.html
+++ b/app/partials/publishAdView.html
@@ -1,6 +1,6 @@
 <div ng-include="'partials/notLoggedNavbar.html'" ng-if="!isLogged"></div>
 <div ng-include="'partials/loggedNavbar.html'" ng-if="isLogged"></div>
-<form class="form-horizontal" ng-controller="RegisterController">
+<form class="form-horizontal" name="publishAdForm">
     <fieldset class="col-lg-10 col-lg-offset-1">
         <legend>Publish New Ad</legend>
         <div class="row">
@@ -8,7 +8,7 @@
                 <div class="form-group">
                     <label for="title" class="col-lg-2 control-label">Title:</label>
                     <div class="col-lg-10">
-                        <input type="text" class="form-control" id="title" placeholder="Title" ng-model="publishForm.username"/>
+                        <input type="text" class="form-control" id="title" placeholder="Title" ng-model="publishForm.title"/>
                     </div>
                 </div>
                 <div class="form-group">
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img alt="No data to display..." ng-src="{{publishForm.image}}"/>
+                <img src="" alt="No data to display..." ng-src="{{publishForm.imageDataUrl}}"/>
             </div>
         </div>
         <div class="row">
@@ -62,7 +62,7 @@
     <fieldset class="col-lg-10 col-lg-offset-1">
         <div class="col-md-6">
             <div class="form-group">
-                <button class="btn btn-primary"  ng-click="register(user)">Publish</button>
+                <button class="btn btn-primary"  ng-click="publishAd(publishForm, publishAdForm)">Publish</button>
                 <a href="#/user/ads/publish" class="btn btn-default">Cancel</a>
             </div>
         </div>
