--- a/app/partials/loggedNavbar.html
+++ b/app/partials/loggedNavbar.html
@@ -1,6 +1,6 @@
 <div class="navbar-collapse collapse navbar-responsive-collapse" ng-controller="LogoutController">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="#/">My Ads</a></li>
+        <li class="active"><a href="#/user/ads">My Ads</a></li>
         <li class="active"><a href="#/user/ads/publish">Publish New Ad</a></li>
         <li class="active"><a href="#/">Edit Profile</a></li>
     </ul>
