--- a/app/partials/publishAdView.html
+++ b/app/partials/publishAdView.html
@@ -63,7 +63,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 <button class="btn btn-primary"  ng-click="publishAd(publishForm, publishAdForm)">Publish</button>
-                <a href="#/user/ads/publish" class="btn btn-default">Cancel</a>
+                <a href="#/user/ads" class="btn btn-default">Cancel</a>
             </div>
         </div>
     </fieldset>
