--- a/app/partials/publishAdView.html
+++ b/app/partials/publishAdView.html
@@ -8,13 +8,13 @@
                 <div class="form-group">
                     <label for="title" class="col-lg-2 control-label">Title:</label>
                     <div class="col-lg-10">
-                        <input type="text" class="form-control" id="title" placeholder="Title" ng-model="publishForm.title"/>
+                        <input type="text" class="form-control" id="title" placeholder="Title" ng-model="publishForm.title" required/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="text" class="col-lg-2 control-label">Text:</label>
                     <div class="col-lg-10">
-                        <textarea class="form-control" id="text" placeholder="Text" ng-model="publishForm.text"></textarea>
+                        <textarea class="form-control" id="text" placeholder="Text" ng-model="publishForm.text" required></textarea>
                     </div>
                 </div>
             </div>
