--- a/app/partials/userAdsList.html
+++ b/app/partials/userAdsList.html
@@ -44,7 +44,7 @@
                                 <div class="col-md-10"><em>{{ad.status}}</em></div>
                             </div>
                             <div class="col-md-6">
-                                <button class="btn btn-primary btn-sm pull-right" ng-click="">Deactivate</button>
+                                <button class="btn btn-primary btn-sm pull-right" ng-click="deactivate(ad.id)">Deactivate</button>
                             </div>
                         </div>
                     </div>
