--- a/app/partials/deleteAdView.html
+++ b/app/partials/deleteAdView.html
@@ -1,2 +1,47 @@
 <div ng-include="'partials/notLoggedNavbar.html'" ng-if="!isLogged"></div>
 <div ng-include="'partials/loggedNavbar.html'" ng-if="isLogged"></div>
+<div class="jumbotron">
+    <div class="row">
+        <div class="col-md-8 col-lg-offset-2">
+            <div class="well">
+                <h3>Confirm deleting ad?</h3>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4>{{ad.title}}</h4>
+                    </div>
+                    <div class="col-md-4 text-right">
+                        {{ad.date | date:'d-MMM-yyyy'}}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="adImage" src="" alt="Ad Image" ng-src="{{ad.imageDataUrl}}">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="well">
+                            {{ad.text}}
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <h5>Category:</h5>
+                            </div>
+                            <div class="col-md-10 well well-sm">
+                                <h5>{{ad.categoryName}}</h5>
+                            </div>
+                            <div class="col-md-2">
+                                <h5>Town:</h5>
+                            </div>
+                            <div class="col-md-10 well well-sm">
+                                <h5>{{ad.townName}}</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <a href="#/user/ads" class="btn btn-default pull-right">Cancel</a>
+                    <button class="btn btn-primary pull-right" ng-click="deleteAd(ad)">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
