--- a/app/partials/userAdsList.html
+++ b/app/partials/userAdsList.html
@@ -46,9 +46,9 @@
                             <div class="col-md-6">
                                 <button class="btn btn-primary btn-sm pull-right" ng-hide="ad.status == 'Inactive' "ng-click="deactivate(ad.id)">Deactivate</button>
                                 <div ng-show="ad.status == 'Inactive'">
-                                    <a href="#/user/ads/delete" class="btn btn-default btn-sm pull-right" ng-click="">Delete</button>
+                                    <a href="#/user/ads/delete" class="btn btn-default btn-sm pull-right">Delete</a>
                                     <button class="btn btn-primary btn-sm pull-right" ng-click="publishAgain(ad.id)">Publish Again</button>
-                                    <button class="btn btn-primary btn-sm pull-right" ng-click="">Edit</button>
+                                    <a href="#/user/ads/edit" class="btn btn-primary btn-sm pull-right">Edit</a>
                                 </div>
                             </div>
                         </div>
