delete/edit ad implemented

--- a/app/partials/deleteAdView.html
+++ b/app/partials/deleteAdView.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="row">
                     <a href="#/user/ads" class="btn btn-default pull-right">Cancel</a>
-                    <button class="btn btn-primary pull-right" ng-click="deleteAd(ad)">Delete</button>
+                    <button class="btn btn-primary pull-right" ng-click="deleteAd(ad.id)">Delete</button>
                 </div>
             </div>
         </div>
