--- a/app/partials/editAdView.html
+++ b/app/partials/editAdView.html
@@ -8,18 +8,18 @@
                 <div class="form-group">
                     <label for="title" class="col-lg-2 control-label">Title:</label>
                     <div class="col-lg-10">
-                        <input type="text" class="form-control" id="title" placeholder="Title" ng-model="publishForm.title" required/>
+                        <input type="text" class="form-control" id="title" placeholder="{{ad.title}}" ng-model="publishForm.title" required/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="text" class="col-lg-2 control-label">Text:</label>
                     <div class="col-lg-10">
-                        <textarea class="form-control" id="text" placeholder="Text" ng-model="publishForm.text" required></textarea>
+                        <textarea class="form-control" id="text" placeholder="{{ad.text}}" ng-model="publishForm.text" required></textarea>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="" alt="No data to display..." ng-src="{{publishForm.imageDataUrl}}"/>
+                <img src="" alt="No data to display..." ng-src="{{ad.imageDataUrl}}"/>
             </div>
         </div>
         <div class="row">
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     <label for="image" class="col-lg-2 control-label">Image:</label>
                     <div class="col-lg-10">
-                        <input type="file" class="form-control" id="image" placeholder="Browse for file" ng-model="publishForm.imageDataUrl"/>
+                        <input type="file" class="form-control" id="image" placeholder="{{ad.imageDataUrl}}" ng-model="publishForm.imageDataUrl"/>
                     </div>
                 </div>
             </div>
